# scaffold

./: .env.example  .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CRITIQUE.md  BENCHMARKS.md  CLAUDE.md  CODE_OVERVIEW.md  COSMOPOLITAN.md  EFFECTIVE_SPEC.md  FIXME.md  LICENSE  Makefile  Makefile.am  ORCHESTRATOR.md  PLAN-A-STREAMING-FOUNDATION.md  PLAN-B-OPENAI-STREAMING.md  PLAN-C-STREAMING-CONFIG.md  PLAN-D-ANTHROPIC-STREAMING.md  PLAN.md  PLAN_APPROVAL_GATES.md  README.md  REARCHITECTURE.md  REARCHITECTURE_PLAN.md  REFACTOR.md  ROADMAP.md  SMOKE_TEST.md  SPEC.md  SPEC_APPROVAL_GATES.md  TODO.md  bin2c.c  configure.ac  ralph.config.json  test_pdf_extractor  test_ralph_config.json
evals/: pyproject.toml
evals/prompts/: contextbench_system.txt  feabench_system.txt  swebench_system.txt
evals/scaffold_evals/: __init__.py
src/: CODE_CRITIQUE.md  Makefile.am  api_common.c  api_common.h  conversation_compactor.h  conversation_tracker.c  conversation_tracker.h  env_loader.c  file_tools.c  file_tools.h  http_client.c  http_client.h  json_utils.c  links_tool.h  llm_provider.c  llm_provider.h  main.c  output_formatter.c  output_formatter.h  prompt_loader.c  prompt_loader.h  ralph.c  ralph.h  shell_tool.c  shell_tool.h  todo_display.h  todo_manager.c  todo_manager.h  todo_tool.c  todo_tool.h  token_manager.c  token_manager.h  tools_system.c  tools_system.h
src/cli/: CODE_CRITIQUE.md  memory_commands.c  memory_commands.h
src/core/: CODE_CRITIQUE.md  agent_identity.c  agent_identity.h  approval_gate.c  approval_gate.h  async_executor.c  async_executor.h  atomic_file.c  atomic_file.h  context_enhancement.c  context_enhancement.h  interrupt.c  interrupt.h  main.c  path_normalize.c  path_normalize.h  protected_files.c  protected_files.h  ralph.c  ralph.h  recap.c  recap.h  shell_parser.c  shell_parser.h  shell_parser_cmd.c  shell_parser_ps.c  streaming_handler.c  streaming_handler.h  subagent_approval.c  tool_executor.c  tool_executor.h
src/db/: CODE_CRITIQUE.md  document_store.c  document_store.h  hnswlib_wrapper.cpp  hnswlib_wrapper.h  message_store.c  message_store.h  metadata_store.c  metadata_store.h  sqlite_dal.c  sqlite_dal.h  task_store.c  task_store.h  vector_db.c  vector_db.h  vector_db_service.c  vector_db_service.h
src/llm/: CODE_CRITIQUE.md  embedding_provider.c  embedding_provider.h  embeddings.c  embeddings.h  embeddings_service.c  embeddings_service.h  llm_provider.c  llm_provider.h  model_capabilities.c  model_capabilities.h
src/mcp/: CODE_CRITIQUE.md  mcp_client.c  mcp_client.h  mcp_client_full.c  mcp_transport.c  mcp_transport.h  mcp_transport_http.c  mcp_transport_stdio.c
src/messaging/: message_poller.c  message_processor.c  message_processor.h  notification_formatter.c
src/models/: claude_model.c  deepseek_model.c  default_model.c  gpt_model.c  qwen_model.c
src/network/: CODE_CRITIQUE.md  api_common.c  api_common.h  api_error.c  api_error.h  embedded_cacert.c  embedded_cacert.h  http_client.c  http_client.h  streaming.c  streaming.h
src/pdf/: CODE_CRITIQUE.md  pdf_extractor.c  pdf_extractor.h
src/policy/: allowlist.c  allowlist.h  approval_errors.c  approval_gate.c  approval_gate.h  atomic_file.c  atomic_file.h  gate_prompter.c  gate_prompter.h  path_normalize.c  pattern_generator.c  pattern_generator.h  protected_files.h  rate_limiter.c  shell_parser.c  shell_parser.h  shell_parser_cmd.c  subagent_approval.c  subagent_approval.h  tool_args.c  tool_args.h  verified_file_context.c  verified_file_context.h  verified_file_python.c
src/providers/: anthropic_provider.c  local_ai_provider.c  openai_provider.c
src/ralph/: main.c
src/scaffold/: main.c
src/session/: CODE_CRITIQUE.md  conversation_compactor.c  conversation_compactor.h  conversation_tracker.c  conversation_tracker.h  rolling_summary.c  session_manager.c  session_manager.h  token_manager.c  token_manager.h
src/tools/: CODE_CRITIQUE.md  conversation_history_tool.c  conversation_history_tool.h  file_tools.c  file_tools.h  http_python.h  links_tool.c  memory_tool.c  memory_tool.h  messaging_tool.c  messaging_tool.h  pdf_tool.c  pdf_tool.h  python_extension.c  python_tool.c  python_tool.h  python_tool_files.c  python_tool_files.h  shell_tool.c  subagent_process.c  subagent_tool.c  subagent_tool.h  todo_display.c  todo_display.h  todo_manager.c  todo_manager.h  todo_tool.c  todo_tool.h  tool_format.h  tool_format_anthropic.c  tool_format_openai.c  tool_result_builder.c  tool_result_builder.h  tools_system.c  tools_system.h  tools_system_safe.c  vector_db_tool.c  vector_db_tool.h  verified_file_python.c  verified_file_python.h
src/utils/: CODE_CRITIQUE.md  common_utils.c  common_utils.h  config.c  config.h  context_retriever.c  context_retriever.h  debug_output.c  debug_output.h  document_chunker.c  document_chunker.h  env_loader.h  json_escape.c  json_output.c  json_output.h  json_utils.c  json_utils.h  output_formatter.c  output_formatter.h  pdf_processor.c  pdf_processor.h  pipe_notifier.c  pipe_notifier.h  prompt_loader.c  ptrarray.h  ralph_home.c  ralph_home.h  spinner.c  terminal.c  uuid_utils.c  uuid_utils.h
test/: Makefile.am  mock_api_server.c  mock_api_server.h  mock_embeddings.c  mock_embeddings.h  mock_embeddings_server.c  mock_embeddings_server.h  mock_embeddings_service.c  test_approval_gate.c  test_atomic_file.c  test_conversation_loading.c  test_conversation_tracker.c  test_darray.c  test_document_chunker.c  test_enhanced_tool_feedback.c  test_env_loader.c  test_file_read_json_escaping.c  test_file_tools.c  test_fs_utils.h  test_http_client.c  test_incomplete_task_bug.c  test_libagent_header.c  test_main.c  test_mcp_integration.c  test_memory_management.c  test_model_tools.c  test_null_message_fields.c  test_output_formatter.c  test_output_improvement.c  test_path_normalize.c  test_prompt_loader.c  test_protected_files.c  test_ptrarray.c  test_ralph.c  test_ralph_integration.c  test_ralph_mcp.c  test_shell_parser.c  test_shell_parser_cmd.c  test_shell_parser_ps.c  test_shell_tool.c  (+8 more)
test/agent/: test_context_mode_injection.c  test_parallel_batch.c  (+2 more)
(+518 files in other folders)
