SUBDIRS = src test

CLEANFILES = hello-world hello-world.aarch64.elf hello-world.com.dbg a.out.aarch64.elf a.out.com.dbg

DISTCLEANFILES = aclocal.m4 compile config.log config.status configure configure~ depcomp install-sh missing Makefile.in src/Makefile.in test/Makefile.in config.guess config.sub test-driver

clean-local:
	rm -rf autom4te.cache .aarch64

distclean-local:
	rm -rf autom4te.cache .aarch64